<resources>
    <string name="app_name">foodsearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="location">位置</string>
    <string name="user">用户</string>
    <string name="personcenter">个人中心</string>
    <string name="login">登录</string>
    <string name="signout">登出</string>
    <string name="allorders">全部订单</string>
    <string name="starshops">收藏店铺</string>
    <string name="receviemsg">消息推送</string>
    <string name="signintitle">用户登录</string>
</resources>
