<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="#cccccc"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            ></LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/personcenter"
                android:textSize="18sp"
                android:gravity="center"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/signintextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/borderradius"
                android:padding="5dp"
                />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <FrameLayout
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/allorders"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/border"
            >
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allorders"
                android:layout_gravity="center_vertical|left"
                android:textSize="18sp"
                ></TextView>
            <ImageView
                android:layout_marginRight="8dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/arrowright"
                android:layout_gravity="center_vertical|right"
                ></ImageView>
        </FrameLayout>
        <FrameLayout
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/starshop"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/border"
            android:layout_below="@id/allorders"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starshops"
                android:layout_gravity="center_vertical|left"
                android:textSize="18sp"
                ></TextView>
            <ImageView

                android:layout_marginRight="8dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/arrowright"
                android:layout_gravity="center_vertical|right"
                />
        </FrameLayout>
        <FrameLayout

            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingTop="4dp"
            android:id="@+id/receivemsg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/starshop"
            android:orientation="vertical"
            android:background="@drawable/border"
            >
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receviemsg"
                android:layout_gravity="center_vertical|left"
                android:textSize="18sp"
                ></TextView>
            <ImageView
                android:id="@+id/receivemsgswitch"
                android:layout_marginRight="8dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/switch_on"
                android:layout_gravity="center_vertical|right"
                ></ImageView>
        </FrameLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        >
        <TextView
            android:id="@+id/signouttext"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/signout"
            android:textAlignment="center"
            android:background="@drawable/borderradius"
                ></TextView>

    </LinearLayout>

</LinearLayout>